--- a/App/app/src/main/res/layout/bluetooth2.xml
+++ b/App/app/src/main/res/layout/bluetooth2.xml
@@ -1,98 +1,147 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/our_lighter_blue">
+    android:background="@color/our_lighter_blue"
+    android:orientation="vertical"
+    android:padding="20dp">
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="20dp"
+        android:text="Muse Bluetooth Connection:"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="@color/our_dark_blue"
+        android:textColorHighlight="@color/our_light_blue"
+        android:textColorHint="@color/our_dark_blue" />
 
     <Spinner
         android:id="@+id/muses_spinner"
         android:layout_width="match_parent"
         android:layout_height="60dp" />
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:orientation="horizontal" >
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
         <Button
             android:id="@+id/refresh"
             android:layout_width="100dp"
             android:layout_height="40dp"
-            android:text="@string/refresh" />
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:background="@color/our_pink"
+            android:text="@string/refresh"
+            app:cornerRadius="10dp" />
+
         <Button
             android:id="@+id/connect"
             android:layout_width="100dp"
             android:layout_height="40dp"
-            android:text="@string/connect" />
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:background="@color/our_pink"
+            android:text="@string/connect"
+            app:cornerRadius="10dp" />
+
         <Button
             android:id="@+id/disconnect"
             android:layout_width="120dp"
             android:layout_height="40dp"
-            android:text="@string/disconnect" />
-    </LinearLayout>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:textSize="16sp"
-        android:text="@string/status" />
-    <TextView
-        android:id="@+id/con_status"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:textSize="16sp"
-        android:text="@string/undefined" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:textSize="16sp"
-        android:text="@string/eeg" />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="horizontal" >
-        <TextView
-            android:id="@+id/eeg_tp9"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:textSize="16sp"
-            android:text="@string/init_val" />
-        <TextView
-            android:id="@+id/eeg_af7"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:textSize="16sp"
-            android:text="@string/init_val" />
-        <TextView
-            android:id="@+id/eeg_af8"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:textSize="16sp"
-            android:text="@string/init_val" />
-        <TextView
-            android:id="@+id/eeg_tp10"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:textSize="16sp"
-            android:text="@string/init_val" />
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:background="@color/our_pink"
+            android:text="@string/disconnect"
+            app:cornerRadius="10dp" />
     </LinearLayout>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:text="beta abs"
+        android:text="@string/status"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+        android:textColor="@color/our_dark_blue"
         android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/con_status"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:padding="5dp"
+        android:text="@string/undefined"
+        android:textSize="16sp" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:text="@string/eeg"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+        android:textColor="@color/our_dark_blue"
+        android:textSize="16sp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/eeg_tp9"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="@string/init_val"
+            android:textColor="@color/our_dark_blue"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/eeg_af7"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="@string/init_val"
+            android:textColor="@color/our_dark_blue"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/eeg_af8"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="@string/init_val"
+            android:textColor="@color/our_dark_blue"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/eeg_tp10"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="@string/init_val"
+            android:textColor="@color/our_dark_blue"
+            android:textSize="16sp" />
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:text="Beta Abs"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+        android:textColor="@color/our_dark_blue"
+        android:textSize="16sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/elem"
@@ -100,6 +149,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="@string/init_val"
+            android:textColor="@color/our_dark_blue"
             android:textSize="16sp" />
 
         <TextView
@@ -108,6 +158,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="@string/init_val"
+            android:textColor="@color/our_dark_blue"
             android:textSize="16sp" />
 
         <TextView
@@ -116,6 +167,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="@string/init_val"
+            android:textColor="@color/our_dark_blue"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textSize="16sp" />
 
         <TextView
@@ -124,6 +177,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="@string/init_val"
+            android:textColor="@color/our_dark_blue"
             android:textSize="16sp" />
     </LinearLayout>
 
@@ -131,64 +185,87 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:text="alpha abs"
+        android:text="Alpha Abs"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+        android:textColor="@color/our_dark_blue"
         android:textSize="16sp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
+
         <TextView
             android:id="@+id/elem1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:textSize="16sp"
-            android:text="@string/init_val" />
+            android:text="@string/init_val"
+            android:textColor="@color/our_dark_blue"
+            android:textSize="16sp" />
+
         <TextView
             android:id="@+id/elem2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:textSize="16sp"
-            android:text="@string/init_val" />
+            android:text="@string/init_val"
+            android:textColor="@color/our_dark_blue"
+            android:textSize="16sp" />
+
         <TextView
             android:id="@+id/elem3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:textSize="16sp"
-            android:text="@string/init_val" />
+            android:text="@string/init_val"
+            android:textColor="@color/our_dark_blue"
+            android:textSize="16sp" />
+
         <TextView
             android:id="@+id/elem4"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:textSize="16sp"
-            android:text="@string/init_val" />
+            android:text="@string/init_val"
+            android:textColor="@color/our_dark_blue"
+            android:textSize="16sp" />
     </LinearLayout>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:textSize="16sp"
-        android:text="@string/version" />
+        android:text="@string/version"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+        android:textColor="@color/our_dark_blue"
+        android:textSize="16sp" />
+
     <TextView
         android:id="@+id/version"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:textSize="16sp"
-        android:text="@string/undefined" />
+        android:text="@string/undefined"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@color/our_dark_blue"
+        android:textSize="16sp" />
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:orientation="horizontal" >
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
         <Button
             android:id="@+id/pause"
             android:layout_width="150dp"
             android:layout_height="40dp"
-            android:text="@string/pause" />
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:background="@color/our_pink"
+            android:text="@string/pause"
+            app:cornerRadius="10dp" />
     </LinearLayout>
 
 </LinearLayout>
