--- a/App/app/src/main/res/layout/end_of_session.xml
+++ b/App/app/src/main/res/layout/end_of_session.xml
@@ -36,7 +36,7 @@
             android:textColor="@color/our_dark_blue"
             android:textSize="22sp" />
 
-        <org.mines.cmeb.musecmeb.CircularImageView
+        <ImageView
             android:id="@+id/happyFaceImageView"
             android:layout_width="200dp"
             android:layout_height="200dp"
