--- a/App/app/src/main/res/layout-land/fragment_menu.xml
+++ b/App/app/src/main/res/layout-land/fragment_menu.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="#00FFFFFF"
             android:src="@drawable/baseline_settings_24"
-            android:visibility="invisible"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.954"
