--- a/App/app/src/main/res/layout/end_of_session.xml
+++ b/App/app/src/main/res/layout/end_of_session.xml
@@ -6,7 +6,9 @@
     android:background="@color/our_lighter_blue"
     android:orientation="vertical"
     android:paddingLeft="8dp"
-    android:paddingRight="8dp">
+    android:paddingRight="8dp"
+    android:scrollbars="vertical"
+    android:verticalScrollbarPosition="right">
 
     <ImageButton
         android:id="@+id/backButton"
@@ -20,7 +22,7 @@
     <LinearLayout
         android:id="@+id/innerLinearLayout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center"
         android:orientation="vertical"
@@ -43,22 +45,30 @@
             android:layout_marginBottom="10dp"
             android:src="@drawable/relax_icon" />
 
-        <TextView
-            android:id="@+id/secondLineTextView"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:text="Time of relaxation:"
-            android:textColor="@color/our_dark_blue"
-            android:textSize="18sp" />
+            android:layout_marginLeft="10dp"
+            android:gravity="center"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/sessionTimeTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:text="5 min and 34 sec"
-            android:textColor="@color/our_pink"
-            android:textSize="22sp" />
+            <TextView
+                android:id="@+id/secondLineTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:text="Time of relaxation:"
+                android:textColor="@color/our_dark_blue"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/sessionTimeTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:text="5 min and 34 sec"
+                android:textColor="@color/our_pink"
+                android:textSize="22sp" />
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
