--- a/App/app/src/main/res/layout/bluetooth2.xml
+++ b/App/app/src/main/res/layout/bluetooth2.xml
@@ -1,8 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/our_lighter_blue"
+    android:gravity="center"
     android:orientation="vertical"
     android:padding="20dp">
 
@@ -29,7 +31,9 @@
     <Spinner
         android:id="@+id/muses_spinner"
         android:layout_width="match_parent"
-        android:layout_height="60dp" />
+        android:layout_height="60dp"
+        android:foregroundTint="@color/our_dark_blue"
+        android:spinnerMode="dropdown" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -43,18 +47,16 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:background="@color/our_pink"
-            android:text="@string/refresh"
-            app:cornerRadius="10dp" />
+            android:text="@string/refresh" />
 
         <Button
             android:id="@+id/connect"
-            android:layout_width="100dp"
+            android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:background="@color/our_pink"
-            android:text="@string/connect"
-            app:cornerRadius="10dp" />
+            android:text="@string/connect" />
 
         <Button
             android:id="@+id/disconnect"
@@ -63,8 +65,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:background="@color/our_pink"
-            android:text="@string/disconnect"
-            app:cornerRadius="10dp" />
+            android:text="@string/disconnect" />
     </LinearLayout>
 
     <TextView
@@ -83,13 +84,15 @@
         android:layout_weight="1"
         android:padding="5dp"
         android:text="@string/undefined"
+        android:textColor="@color/our_light_blue"
         android:textSize="16sp" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="0dp"
         android:layout_weight="1"
-        android:text="@string/eeg"
+        android:text="Channel Connection"
         android:textAppearance="@style/TextAppearance.AppCompat.Display4"
         android:textColor="@color/our_dark_blue"
         android:textSize="16sp" />
@@ -100,149 +103,46 @@
         android:layout_weight="1"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/eeg_tp9"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+        <ImageView
+            android:id="@+id/ch1Status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="1"
-            android:text="@string/init_val"
-            android:textColor="@color/our_dark_blue"
-            android:textSize="16sp" />
+            android:src="@drawable/verified_dark" />
 
-        <TextView
-            android:id="@+id/eeg_af7"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+        <ImageView
+            android:id="@+id/ch2Status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="15dp"
             android:layout_weight="1"
-            android:text="@string/init_val"
-            android:textColor="@color/our_dark_blue"
-            android:textSize="16sp" />
+            android:src="@drawable/verified_dark" />
 
-        <TextView
-            android:id="@+id/eeg_af8"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+        <ImageView
+            android:id="@+id/ch3Status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="15dp"
             android:layout_weight="1"
-            android:text="@string/init_val"
-            android:textColor="@color/our_dark_blue"
-            android:textSize="16sp" />
+            android:src="@drawable/verified_dark" />
 
-        <TextView
-            android:id="@+id/eeg_tp10"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+        <ImageView
+            android:id="@+id/ch4Status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="15dp"
             android:layout_weight="1"
-            android:text="@string/init_val"
-            android:textColor="@color/our_dark_blue"
-            android:textSize="16sp" />
+            android:src="@drawable/verified_dark" />
+
     </LinearLayout>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:text="Beta Abs"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
-        android:textColor="@color/our_dark_blue"
-        android:textSize="16sp" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/elem"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="@string/init_val"
-            android:textColor="@color/our_dark_blue"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/elem5"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="@string/init_val"
-            android:textColor="@color/our_dark_blue"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/elem6"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="@string/init_val"
-            android:textColor="@color/our_dark_blue"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/elem7"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="@string/init_val"
-            android:textColor="@color/our_dark_blue"
-            android:textSize="16sp" />
-    </LinearLayout>
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:text="Alpha Abs"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
-        android:textColor="@color/our_dark_blue"
-        android:textSize="16sp" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/elem1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="@string/init_val"
-            android:textColor="@color/our_dark_blue"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/elem2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="@string/init_val"
-            android:textColor="@color/our_dark_blue"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/elem3"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="@string/init_val"
-            android:textColor="@color/our_dark_blue"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/elem4"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="@string/init_val"
-            android:textColor="@color/our_dark_blue"
-            android:textSize="16sp" />
-    </LinearLayout>
-
-    <TextView
+        android:id="@+id/version_label"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
