--- a/App/app/src/main/res/layout-land/fragment_profile.xml
+++ b/App/app/src/main/res/layout-land/fragment_profile.xml
@@ -65,6 +65,15 @@
                     android:layout_height="200dp">
 
                 </com.github.mikephil.charting.charts.LineChart>
+                <TextView
+                    android:id="@+id/valueTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text=""
+                    android:textSize="16sp"
+                    android:textColor="@android:color/black"
+                    android:visibility="invisible" />
             </LinearLayout>
 
             <LinearLayout
